# bazel-teste-python

./: .gitignore  README.md
.aspect/workflows/: config.yaml  config.yml
.github/workflows/: .aspect-workflows-reusable.yml  main.yml
docs/: ref-cli-draft.md
hello_world/: BUILD  aspects.bzl  hello.py  hello_test.py  package_aspect.bzl
workspace/: .gitignore  .terraform.lock.hcl  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-testlogs  bazel-workspace  workflows.tf
workspace/.aspect/cli/: config.yaml
workspace/.aspect/workflows/: config.yaml
workspace/.github/workflows/: .aspect-workflows-reusable.yaml  .aspect-workflows-reusable.yml  .aspect_workflows_reusable.yml  main.yaml  main.yml
workspace/hello_world/: BUILD  aggregate_docs.py  aspects.bzl  hello.py  hello_test.py  parse_functions.py  run_goodbye.py  run_hello.py
